--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+2019. 7. 5. Added zECyl3DDefAxis. [zeo_prim_ecyl]
+2019. 7. 4. Modified zRGBFPrint and zHSVFPrint. [zeo_color]
+2019. 7. 3. Modified zSphere3DFPrint. [zeo_prim_sphere]
 2019. 6.30. Added zPH3DFReadSTL, which automatically detects if the input STL file is in ASCII or binary format. [zeo_ph, app]
 2019. 6.30. Renamed zPH3DFScanSTL, zPH3DFPrintSTL, zPH3DFReadSTL and zPH3DFWrite to zPH3DFReadSTL_ASCII, zPH3DFWriteSTL_ASCII, zPH3DFReadSTL_Bin and zPH3DFWriteSTL_Bin, respectively, and reimplemented them. [zeo_ph]
 2019. 6.29. Added zVec3DListFind and zVec3DListReg. [zeo_vec3d_list]
