Moved zOpticArray from zeo_mshape to zeo_optic and renamed it to zOpticalInfoArray. Moved zShapeArray from zeo_mshape to zeo_shape and renamed it to zShape3DArray. Separated zeo_ph_stl from zeo_ph. Renamed _zSTLVertListToVertArray and _zSTLFacetListToFaceArray to _zSTLVertListToVec3DArray and _zSTLFacetListToTri3DArray, respectivey. Moved zFaceArray to zeo_elem.h and renamed it to zTri3DArray. Moved zVertArray to zeo_vec3d.h and renamed it to zVec3DArray.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,14 @@
+2019. 7.19. Moved zOpticArray from zeo_mshape to zeo_optic and renamed it to zOpticalInfoArray. [zeo_mshape, zeo_optic]
+2019. 7.19. Moved zShapeArray from zeo_mshape to zeo_shape and renamed it to zShape3DArray. [zeo_mshape, zeo_shape]
+2019. 7.19. Separated zeo_ph_stl from zeo_ph. [zeo_ph, zeo_ph_stl]
+2019. 7.18. Renamed _zSTLVertListToVertArray and _zSTLFacetListToFaceArray to _zSTLVertListToVec3DArray and _zSTLFacetListToTri3DArray, respectivey. [zeo_ph]
+2019. 7.18. Moved zFaceArray to zeo_elem.h and renamed it to zTri3DArray. [zeo_ph, zeo_elem]
+2019. 7.18. Moved zVertArray to zeo_vec3d.h and renamed it to zVec3DArray. [zeo_ph, zeo_vec3d]
+2019. 7.10. Modified _zShape3DNameFromZTK to check duplication of shape names. [zeo_shape, zeo_errmsg]
+2019. 7.10. Renamed _zShape3DRefProp to _zShape3DRefPrp. [zeo_shape]
+2019. 7.10. Added zMShape3DRegZTK. [zeo_mshape]
+2019. 7.10. Renamed zMShape3DScanFile to zMShape3DReadZTK. [zeo_mshape, app]
+2019. 7.10. Exported zMShape3DFromZTK. [zeo_mshape]
 2019. 7. 8. Created zMap class for the upperclass of zTerra as a stub. [zeo_map, zeo]
 2019. 7. 8. Added zTerraDefRegZTK and zTerraFromZTK, and reimplemented zTerraFPrint. [zeo_terra]
 2019. 7. 8. Added zTerraAdjustZRange. [zeo_terra]
