Reimplemented zShape3DRegZTK. Defined ZEO_SHAPE_COM_ARRAY. Added zShape3DQueryAssign and reimplemented _zShape3DTypeFromZTK. Renamed zShape3DAllocNURBS to zShape3DNURBSAlloc. Renamed zeo_shape_*3d_com to zeo_shape3d_*_com. Renamed zShape3DCreate* to zShape3D*Create. Renamed *DefRegZTK to *RegZTK. Added _regZTK member to zShape3D.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,11 @@
+2019. 9.18. Reimplemented zShape3DRegZTK. [zeo_shape]
+2019. 9.18. Defined ZEO_SHAPE_COM_ARRAY. [zeo_shape]
+2019. 9.18. Added zShape3DQueryAssign and reimplemented _zShape3DTypeFromZTK. [zeo_shape]
+2019. 9.18. Renamed zShape3DAllocNURBS to zShape3DNURBSAlloc. [zeo_shape_nurbs]
+2019. 9.18. Renamed zeo_shape_*3d_com to zeo_shape3d_*_com. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, app]
+2019. 9.18. Renamed zShape3DCreate* to zShape3D*Create. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
+2019. 9.18. Renamed *DefRegZTK to *RegZTK. [zeo_ph, zeo_nurbs, zeo_shape, zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_map, zeo_map_terra]
+2019. 9.18. Added _regZTK member to zShape3D. [zeo_shape]
 2019. 9.17. Renamed _parseZTK member in zShape3D to _fromZTK. [zeo_shape]
 2019. 8.12. Abolished zOpticalInfoArrayFind and zShape3DArrayFind because zArrayFindName is already available. [zeo_optic, zeo_shape]
 2019. 8. 9. Ported mshape2gp from RoKi apps. [app]
