Modified zeo_stlconv. Added zShape3DReadZTK and zShape3DWriteZTK. Modified specification of zShape3DRegZTK to accept a tag. Reflected renaming of ZTKEval. Renamed zMShape3DFPrint, zMShape3DScanZTK and zMShape3DPrintZTK to zMShape3DFPrintZTK, zMShape3DReadZTK and zMShape3DWriteZTK, respectively. Abolished zMShape3DFScan. Renamed zShapeListCellFPrint and zShapeListFPrint to zShapeListCellFPrintZTK and zShapeListFPrintZTK, respectively. Renamed _zShape3D*FPrint to _zShape3D*FPrintZTK of subclasses of zShape3D. Abolished *FScan of shape classes. Renamed zShape3DFPrint to zShape3DFPrintZTK. Abolished zShape3DFScan. Renamed _fprint member of zShape3D to _fprintZTK and abolished _fscan member. Renamed zPH3DFPrint to zPH3DFPrintZTK. Abolished zPH3DFScan. Renamed zOpticalInfoFPrint to zOpticalInfoFPrintZTK. Abolished zOpticalInfoFScan. Renamed zNURBS3DFPrint to zNURBS3DFPrintZTK. Abolished zNURBS3DFScan. Modified specifications of zMat2DFPrint, zMat3DFPrint and zMat6DFPrint. Added zMapNetWriteZTK. Renamed zMapNetFPrint to zMapNetFPrintZTK. Renamed zMapFPrint to zMapFPrintZTK. Renamed _parseZTK and _fprint members of zMapCom to _fromZTK and _fprintZTK, respectively. Renamed zMap*Terra to zMapTerra*. Renamed zTerraFPrint to zTerraFPrintZTK. Abolished zTerraFScan. Modified specification of zFrame3DFPrint. Abolished zFrame3DDHFScan. Abolished *RegZTK and *FromZTK of subclasses of zShape3D.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,32 @@
+2019. 9.19. Modified zeo_stlconv. [app]
+2019. 9.19. Added zShape3DReadZTK and zShape3DWriteZTK. [zeo_shape]
+2019. 9.19. Modified specification of zShape3DRegZTK to accept a tag. [zeo_shape]
+2019. 9.19. Reflected renaming of ZTKEval. [zeo_optic]
+2019. 9.19. Renamed zMShape3DFPrint, zMShape3DScanZTK and zMShape3DPrintZTK to zMShape3DFPrintZTK, zMShape3DReadZTK and zMShape3DWriteZTK, respectively. [zeo_mshape, app]
+2019. 9.19. Abolished zMShape3DFScan. [zeo_mshape]
+2019. 9.19. Renamed zShapeListCellFPrint and zShapeListFPrint to zShapeListCellFPrintZTK and zShapeListFPrintZTK, respectively. [zeo_shape_list]
+2019. 9.19. Renamed _zShape3D*FPrint to _zShape3D*FPrintZTK of subclasses of zShape3D. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
+2019. 9.19. Abolished *FScan of shape classes. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
+2019. 9.19. Renamed zShape3DFPrint to zShape3DFPrintZTK. [zeo_shape, zeo_mshape]
+2019. 9.19. Abolished zShape3DFScan. [zeo_shape]
+2019. 9.19. Renamed _fprint member of zShape3D to _fprintZTK and abolished _fscan member. [zeo_shape]
+2019. 9.19. Renamed zPH3DFPrint to zPH3DFPrintZTK. [zeo_ph, app]
+2019. 9.19. Abolished zPH3DFScan. [zeo_ph]
+2019. 9.19. Renamed zOpticalInfoFPrint to zOpticalInfoFPrintZTK. [zeo_optic]
+2019. 9.19. Abolished zOpticalInfoFScan. [zeo_optic]
+2019. 9.18. Renamed zNURBS3DFPrint to zNURBS3DFPrintZTK. [zeo_nurbs]
+2019. 9.18. Abolished zNURBS3DFScan. [zeo_nurbs]
+2019. 9.18. Modified specifications of zMat2DFPrint, zMat3DFPrint and zMat6DFPrint. [zeo_mat2d, zeo_mat3d, zeo_mat6d]
+2019. 9.18. Added zMapNetWriteZTK. [zeo_mapnet]
+2019. 9.18. Renamed zMapNetFPrint to zMapNetFPrintZTK. [zeo_mapnet]
+2019. 9.18. Renamed zMapFPrint to zMapFPrintZTK. [zeo_map, zeo_mapnet]
+2019. 9.18. Renamed _parseZTK and _fprint members of zMapCom to _fromZTK and _fprintZTK, respectively. [zeo_map]
+2019. 9.18. Renamed zMap*Terra to zMapTerra*. [zeo_map_terra]
+2019. 9.18. Renamed zTerraFPrint to zTerraFPrintZTK. [zeo_map_terra]
+2019. 9.18. Abolished zTerraFScan. [zeo_map_terra]
+2019. 9.18. Modified specification of zFrame3DFPrint. [zeo_frame]
+2019. 9.18. Abolished zFrame3DDHFScan. [zeo_frame]
+2019. 9.19. Abolished *RegZTK and *FromZTK of subclasses of zShape3D. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
 2019. 9.18. Reimplemented zShape3DRegZTK. [zeo_shape]
 2019. 9.18. Defined ZEO_SHAPE_COM_ARRAY. [zeo_shape]
 2019. 9.18. Added zShape3DQueryAssign and reimplemented _zShape3DTypeFromZTK. [zeo_shape]
