--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2019. 9.23. Reflected renaming of zListSize. [zeo_vec3d_list, zeo_vec3d_pca, zeo_elem_list, zeo_ph_stl, zeo_shape_sphere, zeo_bv_ch2, zeo_bv_bball, zeo_bv_qhull, zeo_brep]
 2019. 9.19. Modified zeo_stlconv. [app]
 2019. 9.19. Added zShape3DReadZTK and zShape3DWriteZTK. [zeo_shape]
 2019. 9.19. Modified specification of zShape3DRegZTK to accept a tag. [zeo_shape]
