--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2019.11.21. Rewrote README as a markdown file. [README]
 2019.10. 5. Reflected new specification of zMax, zMin and zLimit. [zeo_misc, zeo_color, zeo_optic, zeo_shape_box, zeo_bv_aabb, zeo_col_box, zeo_map_terra]
 2019.10. 1. Enabled make uninstall. [makefile]
 2019. 9.30. Reflected new specification of zPexBH in _zEllips3DClosest and zECyl3DClosest. [zeo_shape_ellips, zeo_shape_ecyl]
