--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2020. 3.27. Modified some .ztk files to be ready for respecification of ZTK format. [example]
 2019.11.21. Rewrote README as a markdown file. [README]
 2019.10. 5. Reflected new specification of zMax, zMin and zLimit. [zeo_misc, zeo_color, zeo_optic, zeo_shape_box, zeo_bv_aabb, zeo_col_box, zeo_map_terra]
 2019.10. 1. Enabled make uninstall. [makefile]
