--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2020. 5.15. Modified zMat3DFromZTK. [zeo_mat3d]
+2020. 5.15. Modified specifications of zVec2D and zMat2D. [zeo_vec2d, zeo_mat2d, zeo_elem]
 2020. 5.14. Added zVec2DArray. [zeo_vec2d]
 2020. 5. 4. Added zPlane3DPointIsOn. [zeo_elem]
 2020. 5. 3. Modified zTri3DPointDist. [zeo_elem]
