--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 2.20. Added zeo_stl2ztk. [app]
 2021. 2.20. Added zSTLIsBin and reimplemented zPH3DFReadSTL. [zeo_ph_stl]
 2021. 2.20. Abolished check of normal vector in _zSTLFacetListReg. [zeo_ph_stl]
 2021. 2.20. Abolished ZEO_WARN_STL_WRONGNORMAL. [zeo_errmsg]
