--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 4. 2. Modified zRGBFPrint and zHSVFPrint. [zeo_color]
 2021. 3.31. Reflect modification of ZEDA and abolished *RegZTK. [zeo_optic, zeo_texture, zeo_ph, zeo_nurbs, zeo_mshape*, zeo_map, zeo_map_terra, zeo_mapnet]
 2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
 2021. 2.23. Reimplemented zXform3D, zXform3DInv, zFrame3DInv, zFrame3DCascade and zFrame3DXform. [zeo_frame]
