--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 4.17. Modified _zShape3DRotFromZTK. [zeo_shape]
 2021. 4.16. Modified zPH3DFReadSTL_Bin to show the progress of reading to stderr. [zeo_ph_stl]
 2021. 4.16. Modified _zSTLVertListReg to speed up find-and-insertion of a vertex. [zeo_ph_stl]
 2021. 4.16. Added zMat3DIsIdent. [zeo_mat3d]
