Renamed zTri3DListInsert to zTri3DListAdd. Renamed zLoop3DFromArray to zLoop3DCreate. Renamed zVec3DAddrListFromArray to zVec3DAddrListCreate. Renamed zVec3DAddrListFromArray to zVec3DArray2AddrList and modified its specification. Renamed zVec3DListFromArray to zVec3DArray2List and modified its specification. Renamed zLoop3DInsert to zLoop3DAdd. Renamed zVec3DAddrListInsert to zVec3DAddrListAdd. Renamed zVec3DListInsert to zVec3DListAdd. Moved zVec3DList2Tree from zeo_vec3d_list to zeo_vec3d_tree, and abolished zeo_vec3d_list_tree.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,12 @@
+2021. 4.19. Renamed zTri3DListInsert to zTri3DListAdd. [zeo_elem_list]
+2021. 4.19. Renamed zLoop3DFromArray to zLoop3DCreate. [zeo_elem_list]
+2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DAddrListCreate. [zeo_vec3d_list, app]
+2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DArray2AddrList and modified its specification. [zeo_vec3d_list]
+2021. 4.19. Renamed zVec3DListFromArray to zVec3DArray2List and modified its specification. [zeo_vec3d_list]
+2021. 4.19. Renamed zLoop3DInsert to zLoop3DAdd. [zeo_elem_list, zeo_bv_ch2]
+2021. 4.19. Renamed zVec3DAddrListInsert to zVec3DAddrListAdd. [zeo_vec3d_list, zeo_elem_list, app]
+2021. 4.19. Renamed zVec3DListInsert to zVec3DListAdd. [zeo_vec3d_list, zeo_vec3d_tree, zeo_pointcloud, zeo_col_gjk]
+2021. 4.19. Moved zVec3DList2Tree from zeo_vec3d_list to zeo_vec3d_tree, and abolished zeo_vec3d_list_tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
 2021. 4.18. Added zVec3DTree2List and zVec3DList2Tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
 2021. 4.18. Modified specification of zVec3DListNN. [zeo_vec3d_list]
 2021. 4.18. Renamed zVecTree3D to zVec3DTree. [zeo_vec3d_tree]
