--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 4.27. Modified zPH3DFReadSTL_Bin. [zeo_ph_stl]
 2021. 4.20. Accelerated conversion from STL to zPH3D by using zVec3DTreeNN. [zeo_ph_stl]
 2021. 4.19. Added zVec3DArray2Tree and zVec3DTree2Array. [zeo_vec3d_tree]
 2021. 4.19. Modified zVec3DTreeAdd. [zeo_vec3d_tree]
