--- a/config.org
+++ b/config.org
@@ -1,5 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.7.1
+VERSION=1.7.2
 
 DEPENDENCY="zeda=1.5.0;zm=1.3.0"
+
+# DAE (COLLADA)
+CONFIG_USE_DAE=y
