--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 4.30. Debugged _zOBJFReadPH3D. [zeo_ph_obj]
 2021. 4.30. Added zShape3DFReadOBJ and modified _zShape3DImportFromZTK. [zeo_shape]
 2021. 4.30. Added _zShape3DAssignPH. [zeo_shape]
 2021. 4.30. Added zPH3DFReadOBJ. [zeo_ph, zeo_ph_obj]
