Modified zBBall and zBBallPL to compute the actual radius without a margin. Debugged _zBBall4. Reimplemented _zBBallTest? and _zBBallPrim with zSphere3DFrom?. Added zSphere3DFrom2, zSphere3DFrom3 and zSphere3DFrom4. Implemented zBDisk and zBDiskPL. Added zDisk2DFrom2 and zDisk2DFrom3. Added zDisk2D class. Added zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. Added zeo_vec2d_list. Added ZVEC2DZERO, ZVEC2DX and ZVEC2DY. Modified _zBBallInc.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,14 @@
+2021. 5. 6. Modified zBBall and zBBallPL to compute the actual radius without a margin. [zeo_bv3d_bball]
+2021. 5. 6. Debugged _zBBall4. [zeo_bv3d_bball]
+2021. 5. 6. Reimplemented _zBBallTest? and _zBBallPrim with zSphere3DFrom?. [zeo_bv3d_bball]
+2021. 5. 6. Added zSphere3DFrom2, zSphere3DFrom3 and zSphere3DFrom4. [zeo_shape3d_sphere]
+2021. 5. 6. Implemented zBDisk and zBDiskPL. [zeo_bv2d, zeo_bv2d_bdisk]
+2021. 5. 6. Added zDisk2DFrom2 and zDisk2DFrom3. [zeo_elem2d]
+2021. 5. 6. Added zDisk2D class. [zeo_elem2d]
+2021. 5. 6. Added zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
+2021. 5. 6. Added zeo_vec2d_list. [zeo_vec2d, zeo_vec2d_list]
+2021. 5. 6. Added ZVEC2DZERO, ZVEC2DX and ZVEC2DY. [zeo_vec2d]
+2021. 5. 6. Modified _zBBallInc. [zeo_bv3d_bball]
 2021. 5. 6. Renamed zBBallPL to _zBBallPL, and newly created zBBallPL to reduce the risk of stack-overflow. [zeo_bv3_bball]
 2021. 5. 6. Defined ZEO_BBALL_PN_THRESHOLD. [zeo_bv3_bball]
 2021. 5. 5. Debugged zMShape3DBBall. [zeo_mshape3d]
