--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+2021. 5.12. Modified zTri3DPointIsInside. [zeo_elem3d]
+2021. 5.12. Reimplemented zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
+2021. 5.12. Added zEdge2D class. [zeo_elem2d]
+2021. 5.12. Reimplemented zTri3DBarycenter, zTri3DCircumcenter, zTri3DIncenter and zTri3DOrthocenter. [zeo_elem3d]
 2021. 5.11. Modified zAABB3D, zAABB3DXform, zAABB3DPL and zAABB3DXformPL. [zeo_bv3d_aabb]
 2021. 5.11. Added zAABox2D, zAABB2D and zAABB2DPL. [zeo_bv2d_aabb, zeo_bv2d]
 2021. 5.11. Renamed zOBB and zOBBPL to zOBB3D and zOBB3DPL, respectively. [zeo_bv3d_obb]
