--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2021. 5.15. Applied zTreeClass and zTreeClassMethod to zeo_vec3d_tree. [zeo_vec3d_tree, zeo_ph_stl]
 2021. 5.12. Modified zTri3DPointIsInside. [zeo_elem3d]
 2021. 5.12. Reimplemented zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
 2021. 5.12. Added zEdge2D class. [zeo_elem2d]
