Modified specifications of zPH3DInertia and zPH3DBaryInertia, and added zPH3DInertiaMass. Modified specification of zTri3DConeInertia to specify density. Renamed _inertia of zShape3DCom to _inertia_d, and added _inertia_m to zShape3DCom. Modified specification of z*3DInertia to specify density, and added z*3DInertiaMass. Added a rule to compile objects independently in makefile. Modified comments of z*3DVolume and z*3DInertia.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+2021.10.24. Modified specifications of zPH3DInertia and zPH3DBaryInertia, and added zPH3DInertiaMass. [zeo_ph]
+2021.10.24. Modified specification of zTri3DConeInertia to specify density. [zeo_elem3d]
+2021.10.24. Renamed _inertia of zShape3DCom to _inertia_d, and added _inertia_m to zShape3DCom. [zeo_shape3d]
+2021.10.24. Modified specification of z*3DInertia to specify density, and added z*3DInertiaMass. [zeo_shape3d_*]
+2021.10.24. Added a rule to compile objects independently in makefile. [src]
+2021.10.23. Modified comments of z*3DVolume and z*3DInertia. [zeo_shape3d_*]
 2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
 2021. 6. 1. Modified allclean.sh in example to skip directories without makefile. [example]
 2021. 5.30. Applied zeda-deb-gen. [makefile]
