Added zPH3DBaryInertia and zPH3DBaryInertiaMass. Renamed z*3DInertia and z*3DInertiaMass to z*3DBaryInertia and z*3DBaryInertia, respectively. Abolished z*3DBaryInertia. Renamed _inertia_m and _inertia_d of zShape3DCom to _baryinertia_m and _baryinertia_d, respectively. Added zMat3DCatVec3DDoubleOuterProd and zMat3DCatVec3DDoubleOuterProdDRC. Added zVec3DDoubleOuterProd2Mat3D. Renamed zMulVec3DOPMat3D and zMulVec3DOPMat3DDRC to zMulVec3DOuterProdMat3D and zMulVec3DOuterProdMat3DDRC.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+2021.10.25. Added zPH3DBaryInertia and zPH3DBaryInertiaMass. [zeo_ph]
+2021.10.25. Renamed z*3DInertia and z*3DInertiaMass to z*3DBaryInertia and z*3DBaryInertia, respectively. [zeo_shape3d_*]
+2021.10.25. Abolished z*3DBaryInertia. [zeo_shape3d_*]
+2021.10.25. Renamed _inertia_m and _inertia_d of zShape3DCom to _baryinertia_m and _baryinertia_d, respectively. [zeo_shape3d]
+2021.10.25. Added zMat3DCatVec3DDoubleOuterProd and zMat3DCatVec3DDoubleOuterProdDRC. [zeo_mat3d]
+2021.10.25. Added zVec3DDoubleOuterProd2Mat3D. [zeo_mat3d]
+2021.10.25. Renamed zMulVec3DOPMat3D and zMulVec3DOPMat3DDRC to zMulVec3DOuterProdMat3D and zMulVec3DOuterProdMat3DDRC. [zeo_mat3d]
 2021.10.24. Modified specifications of zPH3DInertia and zPH3DBaryInertia, and added zPH3DInertiaMass. [zeo_ph]
 2021.10.24. Modified specification of zTri3DConeInertia to specify density. [zeo_elem3d]
 2021.10.24. Renamed _inertia of zShape3DCom to _inertia_d, and added _inertia_m to zShape3DCom. [zeo_shape3d]
