Modified zCyl3DToPH, zCapsule3DToPH, and zCone3DToPH by using zVec3DOrthoNormal. Added zVec3DOrthoNormal. Added zCapsule3D class.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+2023. 5.25. Modified zCyl3DToPH, zCapsule3DToPH, and zCone3DToPH by using zVec3DOrthoNormal. [zeo_shape3d_cyl, zeo_shape3d_capsule, zeo_shape3d_cone]
+2023. 5.25. Added zVec3DOrthoNormal. [zeo_vec3d]
+2023. 5.25. Added zCapsule3D class. [zeo_shape3d_capsule, zeo_shape3d]
 2023. 5.21. Modified _zOpticalInfoESRFromZTK, _zOpticalInfoSnsFromZTK, and _zOpticalInfoAlphaFromZTK to use zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha, respectively. [zeo_render_optic]
 2023. 5.21. Renamed _zOpticalInfoEsrFromZTK and _zOpticalInfoEsrFPrintZTK to _zOpticalInfoESRFromZTK and _zOpticalInfoESRFPrintZTK, respectively. [zeo_render_optic]
 2023. 5.21. Added zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha. [zeo_render_optic]
