Separated config and libinfo.

--- a/config.org
+++ b/config.org
@@ -1,8 +1,4 @@
-PREFIX=$(HOME)/usr
-PROJNAME=zeo
-VERSION=1.13.9
-
-DEPENDENCY="zeda=1.7.7;zm=1.7.3"
+PREFIX=${HOME}/usr
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
