Changed prototypes of zMShape3DReadZTK and zMShape3DWriteZTK. Defined macros for error and warning messages in zeo_pointcloud. Modified implementation of _zPCDCheckFieldNum. Added zVec3DListPCDFWrite and zVec3DListWritePCDFile. Modified prototype of _zPCDFieldAttrFind. Debugged _zPLYFReadFormat and _zPLYFReadElement to check if the token is valid or not. Modified _zPLYFReadProperty to avoid redundant check of a token. Debugged functions that use zSToken in zeo_pointcloud. Renamed zeo_bv3d_ch.c/h to zeo_bv3d_convexhull.c/h. Renamed zeo_bv3d_bball.c/h to zeo_bv3d_boundingball.c/h. Renamed zeo_bv2d_ch.c/h to zeo_bv2d_convexhull.c/h. Renamed zBDisk2D to zBoundingDisk2D. Renamed zeo_bv2d_bdisk.c/h to zeo_bv2d_boundingdisk.c/h.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,16 @@
+2024. 5.29. Changed prototypes of zMShape3DReadZTK and zMShape3DWriteZTK. [zeo_mshape3d]
+2024. 5.29. Defined macros for error and warning messages in zeo_pointcloud. [zeo_errmsg, zeo_pointcloud]
+2024. 5.29. Modified implementation of _zPCDCheckFieldNum. [zeo_pointcloud]
+2024. 5.29. Added zVec3DListPCDFWrite and zVec3DListWritePCDFile. [zeo_pointcloud]
+2024. 5.29. Modified prototype of _zPCDFieldAttrFind. [zeo_pointcloud]
+2024. 5.29. Debugged _zPLYFReadFormat and _zPLYFReadElement to check if the token is valid or not. [zeo_ph_ply]
+2024. 5.29. Modified _zPLYFReadProperty to avoid redundant check of a token. [zeo_ph_ply]
+2024. 5.29. Debugged functions that use zSToken in zeo_pointcloud. [zeo_pointcloud]
+2024. 5.29. Renamed zeo_bv3d_ch.c/h to zeo_bv3d_convexhull.c/h. [zeo_bv3d, zeo_bv3d_convexhull, zeo_bv3d_obb, zeo_bv3d_boundingball, zeo_col_minkowski, zeo_col_gjk, zeo_col_ph, zeo_mshape3d, app, test]
+2024. 5.29. Renamed zeo_bv3d_bball.c/h to zeo_bv3d_boundingball.c/h. [zeo_bv3d, zeo_bv3d_boundingball]
+2024. 5.29. Renamed zeo_bv2d_ch.c/h to zeo_bv2d_convexhull.c/h. [zeo_bv2d, zeo_bv2d_convexhull, zeo_bv3d_convexhull, zeo_bv3d_boundingball]
+2024. 5.29. Renamed zBDisk2D to zBoundingDisk2D. [zeo_bv2d_boundingdisk]
+2024. 5.29. Renamed zeo_bv2d_bdisk.c/h to zeo_bv2d_boundingdisk.c/h. [zeo_bv2d, zeo_bv2d_boundingdisk]
 2024. 5.28. Changed the license from LGPL-3 to MIT license. [all]
 2024. 5.28. Renamed zVD2DLoop to zVoronoi2DLoop, and zVoronoi2D to zVoronoiDiagram2D. [zeo_voronoi2d]
 2024. 5.28. Renamed zDTTri2D to zDelaunayTri2D, and zDelaunay2D to zDelaunayTriangulate2D. [zeo_voronoi2d]
