Added zFrame2DFromCoord2D and zCoord2DFromFrame2D. Added zCoord2D class. Added zMat2DAngle. Defined zmat2Dzero, zmat2Dident, ZMAT2DZERO, ZMAT2DIDENT, and zMat2DVec. Added zFrame2D. Reimplemented zMulMat2DMat2D, zMulMat2DTMat2D, and zMulMat2DMat2DT. Abolished _zMulMat2DMat2D, _zMulMat2DTMat2D, and _zMulMat2DMat2DT. Added zMat2DCreateAngle. Added zMulMat2DVec2DDRC and zMulMat2DTVec2DDRC. Reimplemented zMulMat2DVec2D and zMulMat2DTVec2D. Added zMat2DMatch and zMat2DEqual.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,14 @@
+2024. 6. 3. Added zFrame2DFromCoord2D and zCoord2DFromFrame2D. [zeo_frame2d]
+2024. 6. 3. Added zCoord2D class. [zeo_coord2d]
+2024. 6. 3. Added zMat2DAngle. [zeo_mat2d]
+2024. 6. 2. Defined zmat2Dzero, zmat2Dident, ZMAT2DZERO, ZMAT2DIDENT, and zMat2DVec. [zeo_mat2d]
+2024. 6. 2. Added zFrame2D. [zeo_frame2d, zeo]
+2024. 6. 2. Reimplemented zMulMat2DMat2D, zMulMat2DTMat2D, and zMulMat2DMat2DT. [zeo_mat2d]
+2024. 6. 2. Abolished _zMulMat2DMat2D, _zMulMat2DTMat2D, and _zMulMat2DMat2DT. [zeo_mat2d]
+2024. 6. 2. Added zMat2DCreateAngle. [zeo_mat2d]
+2024. 6. 2. Added zMulMat2DVec2DDRC and zMulMat2DTVec2DDRC. [zeo_mat2d]
+2024. 6. 2. Reimplemented zMulMat2DVec2D and zMulMat2DTVec2D. [zeo_mat2d]
+2024. 6. 2. Added zMat2DMatch and zMat2DEqual. [zeo_mat2d]
 2024. 5.31. Removed test.sh. [test]
 2024. 5.29. Renamed zMShape3DBBall to zMShape3DBoundingBall. [zeo_mshape3d]
 2024. 5.29. Reflected renaming of zCH2/3D* to zConvexHull2/3D*. [example]
